--- a/project/docker-compose.yml
+++ b/project/docker-compose.yml
@@ -8,6 +8,7 @@ services:
   #     - POSTGRES_USER=postgres
   #     - POSTGRES_PASSWORD=postgres
   wiki:
+    container_name: wiki
     build: .
     command: python manage.py runserver 0.0.0.0:8000
     volumes:
