--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -34,6 +34,7 @@
     "material-icon-theme.folders.associations": {
         "forms": "Shader",
         "migrations": "Cluster",
+        "media": "Vercel",
         "hr": "Vercel",
     }
 }
