--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,11 +7,17 @@
         "**/.DS_Store": true,
         "**/Thumbs.db": true,
         "**/__pycache__": true,
-        "**/__init__.py": true
+        "**/__init__.py": true,
+        "**/manage.py": true,
+        "**/wsgi.py": true,
+        "**/.venv": true
     },
     "hide-files.files": [
         "**/__pycache__",
-        "**/__init__.py"
+        "**/__init__.py",
+        "**/manage.py",
+        "**/wsgi.py",
+        "**/.venv"
     ],
     "python.analysis.diagnosticSeverityOverrides": {
         "reportMissingModuleSource": "none",
