--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -41,6 +41,6 @@
         "forms": "Shader",
         "migrations": "Cluster",
         "media": "Vercel",
-        "hr": "Vercel",
+        "signals": "Vercel",
     }
 }
