--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,20 @@
         "**/__init__.py": true,
         "**/manage.py": true,
         "**/wsgi.py": true,
+        "**/authentication/models": true,
+        "**/authentication/migrations": true,
+        "**/authentication/forms": true,
+        "**/authentication/backend": true,
+        "**/authentication/signals": true,
+        "**/authentication/tests": true,
+        "**/authentication/admin.py": true,
+        "**/authentication/apps.py": true,
+        "**/media": true,
+        "**/static": true,
+        "**/data": true,
+        "**/emails": true,
+        "**/README.md": true,
+        "**/urls.py": true,
         "**/.venv": true
     },
     "hide-files.files": [
@@ -17,6 +31,20 @@
         "**/__init__.py",
         "**/manage.py",
         "**/wsgi.py",
+        "**/authentication/models",
+        "**/authentication/migrations",
+        "**/authentication/forms",
+        "**/authentication/backend",
+        "**/authentication/signals",
+        "**/authentication/tests",
+        "**/authentication/admin.py",
+        "**/authentication/apps.py",
+        "**/media",
+        "**/static",
+        "**/data",
+        "**/emails",
+        "**/README.md",
+        "**/urls.py",
         "**/.venv"
     ],
     "python.analysis.diagnosticSeverityOverrides": {
