--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,12 +18,14 @@
         "**/authentication/tests": true,
         "**/authentication/admin.py": true,
         "**/authentication/apps.py": true,
+        "**/authentication/templates/auth": true,
         "**/media": true,
         "**/static": true,
         "**/data": true,
         "**/emails": true,
         "**/README.md": true,
         "**/urls.py": true,
+        "templates": true,
         "**/.venv": true
     },
     "hide-files.files": [
@@ -39,12 +41,14 @@
         "**/authentication/tests",
         "**/authentication/admin.py",
         "**/authentication/apps.py",
+        "**/authentication/templates/auth",
         "**/media",
         "**/static",
         "**/data",
         "**/emails",
         "**/README.md",
         "**/urls.py",
+        "templates",
         "**/.venv"
     ],
     "python.analysis.diagnosticSeverityOverrides": {
