--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,7 +25,7 @@
         "**/emails": true,
         "**/README.md": true,
         "**/urls.py": true,
-        "templates": true,
+        // "templates": true,
         "**/.venv": true
     },
     "hide-files.files": [
