--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,20 +12,21 @@
         "**/wsgi.py": true,
         "**/authentication/models": true,
         "**/authentication/migrations": true,
-        // "**/authentication/forms": true,
+        "**/authentication/forms": true,
         "**/authentication/backend": true,
         "**/authentication/signals": true,
+        "**/authentication/utils": true,
         "**/authentication/tests": true,
         "**/authentication/admin.py": true,
         "**/authentication/apps.py": true,
-        "**/authentication/templates/auth": true,
+        "**/common": true,
         "**/media": true,
         "**/static": true,
         "**/data": true,
         "**/emails": true,
         "**/README.md": true,
         "**/urls.py": true,
-        // "templates": true,
+        "**/templates": true,
         "**/.venv": true
     },
     "hide-files.files": [
@@ -38,17 +39,18 @@
         "**/authentication/forms",
         "**/authentication/backend",
         "**/authentication/signals",
+        "**/authentication/utils",
         "**/authentication/tests",
         "**/authentication/admin.py",
         "**/authentication/apps.py",
-        "**/authentication/templates/auth",
+        "**/common",
         "**/media",
         "**/static",
         "**/data",
         "**/emails",
         "**/README.md",
         "**/urls.py",
-        "templates",
+        "**/templates",
         "**/.venv"
     ],
     "python.analysis.diagnosticSeverityOverrides": {
