--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -37,6 +37,7 @@
     },
 
     "material-icon-theme.folders.associations": {
+        "accounts": "Secure",
         "forms": "Shader",
         "migrations": "Cluster",
         "media": "Vercel",
